--- a/package.json
+++ b/package.json
@@ -6,37 +6,75 @@
     "type": "git",
     "url": "github.com/stephengrider"
   },
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon index.js --ignore client"
+    "dev": "ts-node-dev ./server/server.ts --ignore client",
+    "lint": "tslint --project tsconfig.json --config tslint.json",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier-lint-all": "prettier --write  \"{server,client}/**/*.{js,jsx,ts,tsx}\" \"*.{js, ts}\" && npm run lint:fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-client": "^0.8.2",
-    "axios": "^0.15.3",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.16.0",
-    "connect-mongo": "^1.3.2",
-    "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
-    "express-session": "^1.15.0",
-    "graphql": "^0.8.2",
-    "graphql-tag": "^1.2.4",
-    "html-webpack-plugin": "^2.26.0",
-    "lodash": "^4.17.4",
-    "mongoose": "^4.7.8",
-    "passport": "^0.3.2",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.2",
+    "apollo-link-http": "^1.5.15",
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^2.0.3",
+    "es6-promisify": "^6.0.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
+    "express-session": "^1.16.2",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.6.0",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react": "^15.4.2",
-    "react-apollo": "^0.10.0",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "webpack": "^2.2.0",
-    "webpack-dev-middleware": "^1.9.0"
+    "passport-local-mongoose": "^5.0.1",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
+  },
+  "devDependencies": {
+    "@graphql-codegen/add": "^1.3.1",
+    "@graphql-codegen/cli": "^1.3.0",
+    "@graphql-codegen/introspection": "1.3.0",
+    "@graphql-codegen/typescript": "1.3.0",
+    "@graphql-codegen/typescript-operations": "1.3.0",
+    "@graphql-codegen/typescript-react-apollo": "1.3.0",
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.17.0",
+    "@types/express-graphql": "^0.8.0",
+    "@types/graphql": "^14.2.0",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/lodash": "^4.14.134",
+    "@types/mongoose": "^5.5.6",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local-mongoose": "^4.0.12",
+    "@types/react": "^16.8.20",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router": "^5.0.2",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/webpack": "^4.4.32",
+    "@types/webpack-dev-middleware": "^2.0.2",
+    "css-loader": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^2.4.1",
+    "lint-staged": "^8.2.1",
+    "prettier": "^1.18.2",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^6.0.2",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.2",
+    "webpack": "^4.34.0",
+    "webpack-dev-middleware": "^3.7.0"
   }
 }
