--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql-tag": "^2.10.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.6.0",
+    "mongoose-mongodb-errors": "0.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
@@ -47,6 +48,7 @@
     "@graphql-codegen/typescript": "1.3.0",
     "@graphql-codegen/typescript-operations": "1.3.0",
     "@graphql-codegen/typescript-react-apollo": "1.3.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.17.0",
     "@types/express-graphql": "^0.8.0",
