--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "mongoose-mongodb-errors": "0.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
@@ -57,6 +56,7 @@
     "@types/lodash": "^4.14.134",
     "@types/mongoose": "^5.5.6",
     "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
     "@types/passport-local-mongoose": "^4.0.12",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
