--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "ts-node-dev ./server/server.ts --ignore client",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:fix": "npm run lint -- --fix",
-    "prettier-lint-all": "prettier --write  \"{server,client}/**/*.{js,jsx,ts,tsx}\" \"*.{js, ts}\" && npm run lint:fix"
+    "prettier-lint-all": "prettier --write  \"{server,client}/**/*.{js,jsx,ts,tsx}\" \"*.{js, ts}\" && npm run lint:fix",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "author": "",
   "license": "ISC",
