--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node-dev ./server/server.ts --ignore client",
+    "dev": "ts-node-dev ./server/server.ts --ignore client NODE_ENV=development",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:fix": "npm run lint -- --fix",
     "prettier-lint-all": "prettier --write  \"{server,client}/**/*.{js,jsx,ts,tsx}\" \"*.{js, ts}\" && npm run lint:fix",
@@ -65,11 +65,14 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/webpack": "^4.4.32",
     "@types/webpack-dev-middleware": "^2.0.2",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.4.1",
     "lint-staged": "^8.2.1",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.2",
     "ts-node-dev": "^1.0.0-pre.40",
