trying to deploy

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "main": "index.ts",
   "scripts": {
+    "build": "ts-node-dev webpack.config.ts --development=true",
+    "serve": "nodemon ./dist/server.bundle.js",
     "dev": "ts-node-dev ./server/server.ts --ignore client NODE_ENV=development",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:fix": "npm run lint -- --fix",
@@ -65,7 +67,10 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/webpack": "^4.4.32",
     "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack-node-externals": "^1.6.3",
+    "@types/yargs": "^13.0.2",
     "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.4.1",
     "lint-staged": "^8.2.1",
@@ -80,7 +85,10 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.2",
-    "webpack": "^4.34.0",
-    "webpack-dev-middleware": "^3.7.0"
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-node-externals": "^1.7.2",
+    "yargs": "^14.0.0"
   }
 }
